--- a/software.html
+++ b/software.html
@@ -39,16 +39,36 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/pivotalsoftware/jobs/1930493'>Job Application for Senior Software Engineer (Pivotal Labs) at Pivotal Software</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999698313147-software-engineer-continuous-integration-infrastructure'>Square Software Engineer, Continuous Integration Infrastructure | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">San Francisco, CA</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/stacksports/jobs/1933324'>Job Application for Senior Software Engineer - Payments at Stack Sports  </a></h5> 
+<p><span class="badge badge-light">Plano, TX</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/stacksports/jobs/1936220'>Job Application for Senior Software Engineer at Stack Sports  </a></h5> 
+<p><span class="badge badge-light">Plano, TX</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/CERN/743999698313206-linux-kernel-software-developer-be-co-ht-2019-112-ld-'>CERN Linux Kernel Software Developer (BE-CO-HT-2019-112-LD) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/zetaglobal/job/ooDVafwQ'>Zeta Global Careers - Software Engineer - AI & ML</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/PayScale/743999698331369-director-software-engineering'>PayScale Director, Software Engineering | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Bey/743999698330790-senior-software-engineer-with-saas-products-java-javascript-aws-agile-scrum-environment-'>Bey Senior Software Engineer with SaaS products, Java, JavaScript, AWS, agile/scrum environment. | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Santa Clara, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/impac-careers/job/ovFqbfwv'>Impac Mortgage Corp. Careers - Senior Software Developer</a></h5> 
@@ -117,15 +137,15 @@
 <p><span class="badge badge-light">Montreal, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/punchh/jobs/4494241002'>Job Application for Senior Software Engineer (with DevOps experience) at Punchh</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/punchh/jobs/4494241002'>Job Application for Senior Software Engineer (with DevOps experience) at Punchh</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.thearmadagroup.com/jb/Software-Quality-Engineer-Jobs-in-Sunnyvale-CA/4823717'>Software Quality Engineer Jobs in Sunnyvale CA | Software Engineer Job Recruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.thearmadagroup.com/jb/Software-Quality-Engineer-Jobs-in-Sunnyvale-CA/4823717'>Software Quality Engineer Jobs in Sunnyvale CA | Software Engineer Job Recruiters</a></h5> 
 <p><span class="badge badge-light">Sunnyvale</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698315073-android-software-engineer-mobile'>CapTech Consulting Android Software Engineer - Mobile | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698315073-android-software-engineer-mobile'>CapTech Consulting Android Software Engineer - Mobile | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Reston, VA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -201,7 +221,7 @@
 <p><span class="badge badge-light">Boston, Massachusetts  United States  United States Boston</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://peanut.recruitee.com/o/senior-software-engineer-backend'>
+<h5><a href='https://peanut.recruitee.com/o/senior-software-engineer-backend'>
       Senior Software Engineer (Backend) - Peanut
     </a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
@@ -231,7 +251,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://Ten10.recruiterbox.com/jobs/fk03iaw'>
+<h5><a href='http://Ten10.recruiterbox.com/jobs/fk03iaw'>
     Lead SDET / Lead Software Developer in Test at Ten10
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -299,7 +319,7 @@
 <p><span class="badge badge-light">Burnaby</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wish/ee715fe2-d4b7-4fbd-8b20-1673a106dd58'>Wish - Senior Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/wish/ee715fe2-d4b7-4fbd-8b20-1673a106dd58'>Wish - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -311,11 +331,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-advanced-server-access-staff---principal-1539447/?gh_src=349be7cd1'>Software Engineer, Advanced Server Access (Staff / Principal) | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-advanced-server-access-staff---principal-1539447/?gh_src=349be7cd1'>Software Engineer, Advanced Server Access (Staff / Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.cv-library.co.uk/job/211090474/Java-Software-Developer-6-Months-DV-CLEARED-OUTSIDE-IR35?s=102981&utm_source=dlvr.it&utm_medium=twitter'>Java Software Developer | 6+ Months | DV CLEARED - OUTSIDE IR35 | CV-Library.co.uk | 211090474</a></h5> 
+<h5><a href='https://www.cv-library.co.uk/job/211090474/Java-Software-Developer-6-Months-DV-CLEARED-OUTSIDE-IR35?s=102981&utm_source=dlvr.it&utm_medium=twitter'>Java Software Developer | 6+ Months | DV CLEARED - OUTSIDE IR35 | CV-Library.co.uk | 211090474</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -400,7 +420,7 @@ Software Engineer at Engage in Charleston | React jobs | 42jobs.io
 <p><span class="badge badge-light">Waterloo, Wisconsin</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/react/jobs/8415-software-engineer'>
+<h5><a href='https://www.42jobs.io/react/jobs/8415-software-engineer'>
 Software Engineer at Restaurant Brands International in Miami | React jobs | 42jobs.io
 
 </a></h5> 
@@ -440,26 +460,6 @@ Senior Software Engineer at Solstice Studios in Los Angeles | Rails jobs | 42job
 <h5><a href='https://boards.greenhouse.io/current81/jobs/1152093'>Job Application for Software Engineer, iOS at Current</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/edifecs/job/osKqbfwx'>Edifecs Careers - Software Engineer</a></h5> 
-<p><span class="badge badge-light">Bellevue, Washington</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o3dg9fwp&__jvst=Employee+Referral&__jvsd=skamghwS&__jvsc=Twitter&bid=nFqHlMwo'>ServiceNow Careers - Senior Software Engineer</a></h5> 
-<p><span class="badge badge-light">Hyderabad, India  Hyderabad, India</span></p>
-<p>Posted on:: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AiryRooms/743999698252320-software-engineer-frontend-web-'>Airy Rooms Software Engineer - Frontend (Web) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Jakarta, Indonesia  Indonesia</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/signifyd95/jobs/1909817'>Job Application for Graduate Software Engineer (2020) at Signifyd</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/signifyd95/jobs/1909843'>Job Application for Senior Software Engineer (Back-end) at Signifyd</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-27</p>
 <hr/>
 
 
